--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,13 +109,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.empathylens"
+    namespace 'com.anonymous.empathylens.android'
     defaultConfig {
-        applicationId "com.empathylens"
+        applicationId 'com.anonymous.empathylens.android'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
     signingConfigs {
         debug {
